Further Java Modernization (#1863)