@@ -13,10 +13,10 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Random;
+import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -130,9 +130,9 @@ class InternetTest {
 
         when(spyedFaker.fakeValuesService()).thenReturn(mockedFakeValuesService);
         when(mockedFakeValuesService.fetchObject("name.prefix", spyedFaker.getContext()))
-            .thenReturn(Collections.emptySet());
+            .thenReturn(Set.of());
         when(mockedFakeValuesService.fetchObject("name.suffix", spyedFaker.getContext()))
-            .thenReturn(Collections.emptySet());
+            .thenReturn(Set.of());
 
         String emailAddress = spyedFaker.internet().emailAddress("John McClane");
         assertThat(emailAddress).startsWith("john.mcclane@");
@@ -522,7 +522,7 @@ class InternetTest {
     @Test
     void testUserAgent() {
         Internet.UserAgent[] agents = Internet.UserAgent.values();
-        for (Internet.UserAgent agent : agents) {
+        for (var agent : agents) {
             assertThat(faker.internet().userAgent(agent)).isNotEmpty();
         }
 
@@ -533,7 +533,7 @@ class InternetTest {
     @Test
     void testBotUserAgent() {
         Internet.BotUserAgent[] agents = Internet.BotUserAgent.values();
-        for (Internet.BotUserAgent agent : agents) {
+        for (var agent : agents) {
             assertThat(faker.internet().botUserAgent(agent)).isNotEmpty();
         }
 
